# dummy_vr_control

./: .gitignore  demo_dummy.py  dummy_aloha_action_sync.py  dummy_aloha_action_sync_collect.py  dummy_aloha_action_sync_movel.py  dummy_env.py  dummy_utils.py  hello.py  init_ref_json_cache.py  pyproject.toml  ref_demo_inz_discover_learn.ipynb  ref_demo_inz_drag_teach.ipynb  ref_demo_inz_movej_learn.ipynb
