[project]
name = "dummy-vr-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "gym>=0.26.2",
    "igibson>=2.2.2",
    "ipykernel>=6.29.5",
    "mediapipe>=0.10.21",
    "oculus-reader",
    "pynput>=1.7.7",
    "pyusb>=1.3.1",
    "telemoma",
]

[tool.uv.sources]
oculus-reader = { path = "../../../../oculus_reader" }
telemoma = { path = "../../../../telemoma" }
